Update and rename pro.html to index.html

--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
             <h1>Connection Portal</h1>
             <video width="200" height="200" controls></video>
             <div class="buttons">
-                <a href="https://example-online-service.com" class="portal-btn btn-online" target="_blank">
+                <a href="https://canvas-painting-without-sreen-recording.vercel.app/" class="portal-btn btn-online" target="_blank">
                     <span class="status-icon"></span> Without Camera
                 </a>
-                <a href="https://example-offline-docs.com" class="portal-btn btn-offline" target="_blank">
+                <a href="https://aryanlakhanpal.github.io/ml-hand/" class="portal-btn btn-offline" target="_blank">
                     <span class="status-icon"></span> With Camera
                 </a>
             </div>
