--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <a href="https://canvas-painting-without-sreen-recording.vercel.app/" class="portal-btn btn-online" target="_blank">
                     <span class="status-icon"></span> Without Camera
                 </a>
-                <a href="https://aryanlakhanpal.github.io/ml-hand/" class="portal-btn btn-offline" target="_blank">
+                <a href="https://editor.p5js.org/aryanlakhanpal/full/WqvrKXY_k" class="portal-btn btn-offline" target="_blank">
                     <span class="status-icon"></span> With Camera
                 </a>
             </div>
